@@ -95,7 +95,7 @@ fold_lower (char *name)
 	return name;
 }
 
-static char *
+char *
 fold_upper (char *name)
 {
 	unsigned char	*p;
@@ -924,6 +924,8 @@ set_choice:
 		cb_fold_copy = COB_FOLD_UPPER;
 	} else if (!cb_strcasecmp (p, "LOWER")) {
 		cb_fold_copy = COB_FOLD_LOWER;
+	} else if (!strcasecmp (p, "BOTH")) {
+		cb_fold_copy = COB_FOLD_BOTH;
 	} else {
 		ppp_error_invalid_option ("FOLD-COPY-NAME", p);
 	}
@@ -1536,7 +1538,7 @@ copy_source:
   TOKEN
   {
 	$$ = fix_filename ($1);
-	if (cb_fold_copy == COB_FOLD_LOWER) {
+	if (cb_fold_copy == COB_FOLD_LOWER || cb_fold_copy == COB_FOLD_BOTH) {
 		$$ = fold_lower ($$);
 	} else if (cb_fold_copy == COB_FOLD_UPPER) {
 		$$ = fold_upper ($$);
