@@ -114,5 +114,8 @@ CB_ONWARNDEF (cb_warn_dialect, "dialect",
 CB_NOWARNDEF (cb_warn_source_after_code, "dangling-text",
 	_("  -Wdangling-text       warn about source text after program-area"))
 
+CB_ONWARNDEF (cb_missing_newline, "missing-newline",
+	_("  -Wno-missing-newline   do not warn about missing newlines"))
+
 CB_ONWARNDEF (cb_warn_filler, "others",
 	_("  -Wno-others           do not warn about different issues"))
